--- a/index.html
+++ b/index.html
@@ -108,6 +108,42 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 2rem;
+            position: relative;
+        }
+
+        .container::before {
+            content: '';
+            position: absolute;
+            top: 20%;
+            right: -5%;
+            width: 300px;
+            height: 400px;
+            background: rgba(37, 99, 235, 0.03);
+            border-radius: 70% 30% 60% 40%;
+            z-index: -1;
+            animation: float 20s ease-in-out infinite;
+        }
+
+        .container::after {
+            content: '';
+            position: absolute;
+            bottom: 10%;
+            left: -3%;
+            width: 250px;
+            height: 350px;
+            background: rgba(16, 185, 129, 0.04);
+            border-radius: 40% 60% 30% 70%;
+            z-index: -1;
+            animation: float 25s ease-in-out infinite reverse;
+        }
+
+        @keyframes float {
+            0%, 100% {
+                transform: translateY(0px) rotate(0deg);
+            }
+            50% {
+                transform: translateY(-20px) rotate(5deg);
+            }
         }
 
         .view {
@@ -324,6 +360,40 @@
             color: white;
             border-radius: 2rem;
             box-shadow: var(--shadow-lg);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .portfolio-header::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            right: -20%;
+            width: 60%;
+            height: 120%;
+            background: rgba(255, 255, 255, 0.08);
+            border-radius: 60% 40% 70% 30%;
+            transform: rotate(-15deg);
+            z-index: 1;
+        }
+
+        .portfolio-header::after {
+            content: '';
+            position: absolute;
+            bottom: -30%;
+            left: -10%;
+            width: 40%;
+            height: 80%;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 50% 60% 40% 70%;
+            transform: rotate(25deg);
+            z-index: 1;
+        }
+
+        .portfolio-title,
+        .portfolio-subtitle {
+            position: relative;
+            z-index: 2;
         }
 
         .portfolio-title {
@@ -483,6 +553,21 @@
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 1.5rem;
             margin-bottom: 3rem;
+            position: relative;
+            z-index: 1;
+        }
+
+        .stats-grid::before {
+            content: '';
+            position: absolute;
+            top: -50px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            height: 150px;
+            background: rgba(37, 99, 235, 0.02);
+            border-radius: 50% 70% 60% 40%;
+            z-index: -1;
         }
 
         .stat-card {
