--- a/index.html
+++ b/index.html
@@ -45,32 +45,51 @@
         }
 
         .header {
-            background: var(--surface);
-            border-bottom: 1px solid var(--border);
-            padding: 1rem 2rem;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            box-shadow: var(--shadow);
+            position: fixed;
+            top: 2rem;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1000;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 2rem;
+            padding: 0.75rem 1.5rem;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            max-width: fit-content;
+        }
+
+        [data-theme="dark"] .header {
+            background: rgba(30, 41, 59, 0.9);
+            border: 1px solid rgba(148, 163, 184, 0.2);
+        }
+
+        .header:hover {
+            background: rgba(255, 255, 255, 0.95);
+            box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
+        }
+
+        [data-theme="dark"] .header:hover {
+            background: rgba(30, 41, 59, 0.95);
         }
 
         .header-content {
-            max-width: 1200px;
-            margin: 0 auto;
             display: flex;
-            justify-content: space-between;
             align-items: center;
+            gap: 2rem;
         }
 
         .logo {
-            font-size: 1.5rem;
-            font-weight: 700;
+            font-size: 1.25rem;
+            font-weight: 800;
             color: var(--primary);
+            letter-spacing: -0.02em;
         }
 
         .nav {
             display: flex;
-            gap: 2rem;
+            gap: 0.5rem;
             align-items: center;
         }
 
@@ -79,15 +98,35 @@
             border: none;
             color: var(--text-light);
             cursor: pointer;
-            padding: 0.5rem 1rem;
-            border-radius: 0.5rem;
-            transition: all 0.2s;
-            font-weight: 500;
+            padding: 0.5rem 1.25rem;
+            border-radius: 1.5rem;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            font-weight: 600;
+            font-size: 0.875rem;
+            position: relative;
+            overflow: hidden;
         }
 
-        .nav-btn:hover, .nav-btn.active {
+        .nav-btn:hover {
             color: var(--primary);
             background: rgba(37, 99, 235, 0.1);
+        }
+
+        .nav-btn.active {
+            color: white;
+            background: var(--primary);
+            box-shadow: 0 4px 14px rgba(37, 99, 235, 0.4);
+        }
+
+        .nav-btn.active::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), transparent);
+            pointer-events: none;
         }
 
         .theme-toggle {
@@ -95,19 +134,29 @@
             border: 1px solid var(--border);
             color: var(--text);
             padding: 0.5rem;
-            border-radius: 0.5rem;
+            border-radius: 1rem;
             cursor: pointer;
-            transition: all 0.2s;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 2.5rem;
+            height: 2.5rem;
+            font-size: 1rem;
+            margin-left: 0.5rem;
         }
 
         .theme-toggle:hover {
-            background: var(--background);
+            background: var(--primary);
+            color: white;
+            border-color: var(--primary);
+            transform: scale(1.05);
         }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 2rem;
+            padding: 8rem 2rem 2rem;
             position: relative;
         }
 
@@ -609,11 +658,32 @@
             }
             
             .container {
-                padding: 1rem;
+                padding: 7rem 1rem 1rem;
             }
             
             .header {
-                padding: 1rem;
+                top: 1rem;
+                left: 1rem;
+                right: 1rem;
+                transform: none;
+                max-width: none;
+            }
+
+            .header-content {
+                gap: 1rem;
+            }
+
+            .nav {
+                gap: 0.25rem;
+            }
+
+            .nav-btn {
+                padding: 0.5rem 1rem;
+                font-size: 0.8rem;
+            }
+
+            .logo {
+                font-size: 1.1rem;
             }
         }
     </style>
