--- a/index.html
+++ b/index.html
@@ -14,18 +14,41 @@
         :root {
             --primary: #2563eb;
             --primary-dark: #1d4ed8;
+            --primary-light: #3b82f6;
             --primary-glow: rgba(37, 99, 235, 0.4);
             --secondary: #64748b;
             --success: #10b981;
+            --success-light: #34d399;
             --background: #f8fafc;
+            --background-alt: #f1f5f9;
             --surface: #ffffff;
-            --text: #1e293b;
+            --surface-elevated: #ffffff;
+            --text: #0f172a;
+            --text-secondary: #334155;
             --text-light: #64748b;
+            --text-lighter: #94a3b8;
             --border: #e2e8f0;
-            --shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-            --shadow-md: 0 4px 20px rgba(0, 0, 0, 0.12);
-            --shadow-lg: 0 10px 40px rgba(0, 0, 0, 0.15);
-            --shadow-xl: 0 20px 60px rgba(0, 0, 0, 0.2);
+            --border-light: #f1f5f9;
+            --shadow: 0 1px 3px rgba(0, 0, 0, 0.04), 0 1px 2px rgba(0, 0, 0, 0.06);
+            --shadow-md: 0 4px 6px rgba(0, 0, 0, 0.05), 0 2px 4px rgba(0, 0, 0, 0.06);
+            --shadow-lg: 0 10px 15px rgba(0, 0, 0, 0.08), 0 4px 6px rgba(0, 0, 0, 0.05);
+            --shadow-xl: 0 20px 25px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.04);
+            --shadow-2xl: 0 25px 50px rgba(0, 0, 0, 0.15);
+            --radius-sm: 0.5rem;
+            --radius-md: 0.75rem;
+            --radius-lg: 1rem;
+            --radius-xl: 1.25rem;
+            --radius-2xl: 1.5rem;
+            --radius-3xl: 2rem;
+            --spacing-xs: 0.5rem;
+            --spacing-sm: 0.75rem;
+            --spacing-md: 1rem;
+            --spacing-lg: 1.5rem;
+            --spacing-xl: 2rem;
+            --spacing-2xl: 2.5rem;
+            --spacing-3xl: 3rem;
+            --spacing-4xl: 4rem;
+            --spacing-5xl: 5rem;
         }
 
         [data-theme="dark"] {
@@ -37,12 +60,40 @@
         }
 
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             background: var(--background);
             color: var(--text);
             line-height: 1.6;
             transition: all 0.3s ease;
+            font-size: 16px;
+            font-weight: 400;
+            letter-spacing: -0.01em;
         }
+
+        h1, h2, h3, h4, h5, h6 {
+            font-weight: 600;
+            letter-spacing: -0.025em;
+            line-height: 1.2;
+            margin: 0;
+        }
+
+        h1 { font-size: 2.5rem; font-weight: 700; }
+        h2 { font-size: 2rem; font-weight: 600; }
+        h3 { font-size: 1.5rem; font-weight: 600; }
+        h4 { font-size: 1.25rem; font-weight: 600; }
+        h5 { font-size: 1.125rem; font-weight: 500; }
+        h6 { font-size: 1rem; font-weight: 500; }
+
+        p {
+            margin: 0 0 var(--spacing-md);
+            line-height: 1.65;
+            color: var(--text-secondary);
+        }
+
+        .text-sm { font-size: 0.875rem; }
+        .text-xs { font-size: 0.75rem; }
+        .text-lg { font-size: 1.125rem; }
+        .text-xl { font-size: 1.25rem; }
 
         .header {
             position: fixed;
@@ -397,27 +448,30 @@
 
         .project-card {
             background: var(--surface);
-            border-radius: 1.5rem;
+            border-radius: var(--radius-2xl);
             overflow: hidden;
-            box-shadow: var(--shadow-md);
+            box-shadow: var(--shadow-lg);
             border: 1px solid var(--border);
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            position: relative;
+            group: hover;
         }
 
         .project-card:hover {
-            box-shadow: var(--shadow-xl);
+            box-shadow: var(--shadow-2xl);
             border-color: rgba(37, 99, 235, 0.2);
+            transform: scale(1.02);
         }
 
         .project-image {
             width: 100%;
-            height: 220px;
+            height: 240px;
             background: linear-gradient(135deg, var(--primary), var(--success));
             display: flex;
             align-items: center;
             justify-content: center;
             color: white;
-            font-size: 1.75rem;
+            font-size: 1.875rem;
             font-weight: 700;
             letter-spacing: 0.05em;
             position: relative;
@@ -431,39 +485,55 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
+            background: linear-gradient(45deg, rgba(255, 255, 255, 0.1), transparent 50%);
+            transform: translateX(-100%);
+            transition: transform 0.6s ease;
+        }
+
+        .project-card:hover .project-image::before {
+            transform: translateX(100%);
         }
 
         .project-content {
-            padding: 2rem;
+            padding: var(--spacing-2xl);
         }
 
         .project-title {
-            font-size: 1.25rem;
+            font-size: 1.375rem;
             font-weight: 600;
-            margin-bottom: 0.5rem;
+            margin-bottom: var(--spacing-sm);
             color: var(--text);
+            letter-spacing: -0.01em;
         }
 
         .project-description {
             color: var(--text-light);
-            margin-bottom: 1rem;
+            margin-bottom: var(--spacing-lg);
+            line-height: 1.6;
+            font-size: 0.95rem;
         }
 
         .tech-tags {
             display: flex;
             flex-wrap: wrap;
-            gap: 0.5rem;
+            gap: var(--spacing-xs);
         }
 
         .tech-tag {
-            background: var(--background);
-            color: var(--text);
-            padding: 0.25rem 0.5rem;
-            border-radius: 0.25rem;
-            font-size: 0.875rem;
+            background: var(--background-alt);
+            color: var(--text-secondary);
+            padding: var(--spacing-xs) var(--spacing-sm);
+            border-radius: var(--radius-md);
+            font-size: 0.8rem;
+            font-weight: 500;
             border: 1px solid var(--border);
+            transition: all 0.2s ease;
+        }
+
+        .tech-tag:hover {
+            background: var(--primary);
+            color: white;
+            border-color: var(--primary);
         }
 
         .modal {
